# Bitrecover

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  HOW_TO_UPLOAD_GITHUB_FOLDER.md  LICENSE  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  address.txt  run_bitrecover.bat
.github/workflows/: build.yml
AddressUtil/: AddressUtil.h  AddressUtil.vcxproj  Base58.cpp  Makefile  hash.cpp
CLKeySearchDevice/: CLKeySearchDevice.cpp  CLKeySearchDevice.h  CLKeySearchDevice.vcxproj  Makefile  bitcrack.cl  keysearch.cl
CmdParse/: CmdParse.cpp  CmdParse.h  CmdParse.vcxproj  Makefile
CryptoUtil/: CryptoUtil.h  CryptoUtil.vcxproj  Makefile  Rng.cpp  checksum.cpp  hash.cpp  ripemd160.cpp  sha256.cpp
CudaKeySearchDevice/: CudaAtomicList.cu  CudaAtomicList.cuh  CudaAtomicList.h  CudaDeviceKeys.cu  CudaDeviceKeys.cuh  CudaDeviceKeys.h  CudaHashLookup.cu  CudaHashLookup.cuh  CudaHashLookup.h  CudaKeySearchDevice.cpp  CudaKeySearchDevice.cu  CudaKeySearchDevice.h  CudaKeySearchDevice.vcxproj  Makefile  cudabridge.cu  cudabridge.h
KeyFinder/: ConfigFile.cpp  ConfigFile.h  DeviceManager.cpp  DeviceManager.h
KeyFinderLib/: KeyFinder.cpp  KeyFinder.h  KeyFinderLib.vcxproj  KeyFinderShared.h  KeySearchDevice.h  KeySearchTypes.h  Makefile
Logger/: Logger.cpp  Logger.h  Logger.vcxproj  Makefile
clMath/: clMath.vcxproj  ripemd160.cl  secp256k1.cl  sha256.cl
clUtil/: Makefile  clContext.cpp  clContext.h  clUtil.cpp  clUtil.vcxproj  clerrors.cpp  clutil.h
config/: config.json
cudaMath/: cudaMath.vcxproj  ptx.cuh  ripemd160.cuh  secp256k1.cuh  sha256.cuh
cudaUtil/: Makefile  cudaUtil.cpp  cudaUtil.h  cudaUtil.vcxproj
embedcl/: Makefile  embedcl.vcxproj  main.cpp
include/bitrecover/: constants.h  types.h
scripts/: send_email.py
secp256k1lib/: Makefile  secp256k1.cpp  secp256k1.h  secp256k1lib.vcxproj
src/: BitrecoverEngine.cpp  BitrecoverEngine.h  ConfigManager.cpp  ConfigManager.h  EmailNotifier.cpp  EmailNotifier.h  MultiGPUManager.cpp  MultiGPUManager.h  RandomKeyGenerator.cpp  RandomKeyGenerator.h  StatusDisplay.cpp  StatusDisplay.h  main.cpp
tools/AddrGen/: AddrGen.vcxproj  Makefile  main.cpp
util/: Makefile  util.cpp  util.h  util.vcxproj
